objects/Quote.object
<CustomObject>
    <fields>
        <fullName>ASFQ1__c</fullName>
        <description>For Conga - Acct Team, Contacts, Sutter Status</description>
        <formula>&quot;&amp;QueryId=[AcctOppGrpAE]a4r41000000HjXj?pv0={QVar0}&quot;+
&quot;,[AcctOppGrpImp]a4r41000000HjXi?pv0={QVar0}&quot;+
&quot;,[AcctOppGrpUW]a4r41000000HjXk?pv0={QVar0}&quot;+
&quot;,[AcctOppGrpSVP]a4r41000000HjXv?pv0={QVar0}&quot;+
&quot;,[AcctOppGrpVP]a4r41000000HjXn?pv0={QVar0}&quot;+
&quot;,[AcctOppGrpAM]a4r41000000HjXl?pv0={QVar0}&quot;+
&quot;,[PRIMCONTACT]a4r41000000HjXp?pv0={QVar0}&quot;+
&quot;,[SUTTER]a4r41000000HjXo?pv0={QVar0}&quot;+
&quot;,[ServiceProv]a4r41000000HjXw?pv0={QVar0}&quot;+
&quot;,[Castlight]a4r41000000HjXr?pv0=&apos;&quot;+ Id +&quot;&apos;~pv1=&apos;Castlight&apos;&quot;+
&quot;,[LHOL1]a4r41000000HjXr?pv0=&apos;&quot;+Id+&quot;&apos;~pv1=&apos;LiveHealth Online&apos;&quot;+
&quot;,[MERCERPRGS]a4r41000000HjXr?pv0=&apos;&quot;+Id+&quot;&apos;~pv1=&apos;Bold&apos;|&apos;Integrated Health Model&apos;|&apos;Mercer Health Advantage&apos;|&apos;Behavioral Health Solution&apos;|&apos;CCMU%2FMaternity Solution&apos;|&apos;Weight Management Solution&apos;|&apos;Wellness Solution&apos;|&apos;THTY&apos;|&apos;Maternity Solution&apos;&quot;+
&quot;,[AimPRG]a4r41000000HjXq?pv0=&apos;&quot;+Id+&quot;&apos;~pv1=&apos;AIM%25&apos;&quot;+
&quot;,[VSOpinion]a4r41000000HjXr?pv0=&apos;&quot;+ Id +&quot;&apos;~pv1=&apos;Virtual Second Opinion&apos;&quot;+
&quot;,[RDM]a4r41000000HjXr?pv0=&apos;&quot;+ Id +&quot;&apos;~pv1=&apos;Remote Diabetes Monitoring&apos;&quot;+ 
&quot;,[ActWiseFSA]a4r41000000HjXr?pv0=&apos;&quot;+ Id +&quot;&apos;~pv1=&apos;ActWise FSA&apos;&quot;+
&quot;,[ActWiseCommuter]a4r41000000HjXr?pv0=&apos;&quot;+ Id +&quot;&apos;~pv1=&apos;ActWise Commuter&apos;&quot;+
&quot;,[ANANetworks]a4r41000000HjXr?pv0=&apos;&quot;+ Id +&quot;&apos;~pv1=&apos;ANA Custom Networks&apos;&quot;+
&quot;,[DPP]a4r41000000HjXr?pv0=&apos;&quot;+ Id +&quot;&apos;~pv1=&apos;Diabetes Prevention Program&apos;&quot;+
&quot;,[Onsite]a4r41000000HjXr?pv0=&apos;&quot;+ Id +&quot;&apos;~pv1=&apos;Onsite Clinics&apos;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASF QueryString1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASFQ2__c</fullName>
        <description>&quot;&amp;QueryId=[DentalChoice]a4r4100000058xTAAQ?pv0=&apos;&quot;+ Id +&quot;&apos;~pv1=&apos;Default&apos;&quot;+
&quot;,[CastlightCIP]a4r1k0000004GQ1?pv0=&apos;{QVar0}&apos;&quot;</description>
        <formula>&quot;&amp;QueryId=[DentalChoice]a4r4100000058xTAAQ?pv0=&apos;&quot;+ Id +&quot;&apos;~pv1=&apos;Default&apos;&quot;+
&quot;,[CastlightCIP]a4r41000001YoFC?pv0=&apos;&quot;+ Id +&quot;&apos;&quot;+
&quot;,[MedicalCDHP]a4r4100000012t1?pv0=&apos;{QVar1}&apos;~pv1=&apos;Medical CDHP HRA&apos;|&apos;Medical CDHP HSA&apos;|&apos;Medical CDHP&apos;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASF QueryString2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Leveraged by Conga button (URL can&apos;t pull Account name to match file output requirement)</description>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnthemEntityTransform__c</fullName>
        <formula>IF(OR(Opportunity.RecordTypeName__c == &apos;GRS In Group Add Product&apos;,  Opportunity.RecordTypeName__c == &apos;GRS In Group Change&apos; , Opportunity.RecordTypeName__c == &apos;GRS New Business&apos; , Opportunity.RecordTypeName__c == &apos;GRS Renewal&apos;),&apos;Local&apos;,IF(OR(ISPICKVAL(Opportunity.Account.Anthem_Entity__c,&apos;Local/Large Group&apos;),ISPICKVAL(Opportunity.Account.Anthem_Entity__c,&apos;Labor and Trust&apos;)), &apos;Local&apos;, &apos;National&apos;))</formula>
        <label>AnthemEntityTransform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>TEXT( Opportunity.Account.Anthem_Entity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexAsyncJobId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ApexAsyncJobId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autism_Spectrum_QLIs__c</fullName>
        <label>Autism Spectrum QLIs</label>
        <summaryFilterItems>
            <field>QuoteLineItem.IsAutismProduct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BenefitRenewalAnniversaryDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Renewal Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BenefitRenewalAnniversary__c</fullName>
        <label>Benefit Renewal Anniversary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Benefit Plan Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Components__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Displays the type of bill that will be produced.This field was added for the WGS system and the Group Load functionality.</inlineHelpText>
        <label>Bill Components</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I (Individually billed)</fullName>
                    <label>Individually billed</label>
                </value>
                <value>
                    <fullName>G (Not individually billed)</fullName>
                    <label>Not individually billed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDHP_Questionnaire_Name__c</fullName>
        <description>Created to store data of &quot;CDHP Parent Name&quot; of &quot;CDHP Questionnaire&quot; object from ISG org.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CDHP Questionnaire Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDHP_Questionnaire_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDHP Questionnaire Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDHP_SF_Id_From_ISG__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDHP SF Id From ISG</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIPExcluded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This group number is not eligible to be submitted through the Client Intake Process.</inlineHelpText>
        <label>CIP Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Castlight_Product_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Castlight Product Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <description>Supporting Conga Button</description>
        <formula>TEXT(GroupNumber__r.ClaimSystem__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collab_Account_ID__c</fullName>
        <formula>GroupNumber__r.Collab_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collab Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeadPLs__c</fullName>
        <description>Count of Dead Quote Line items</description>
        <label>Dead PLs</label>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>Dead, Lost, IGAP Dead, IGAP Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Delivery_Channel__c</fullName>
        <formula>TEXT(GroupNumber__r.DeliveryChannel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DivisionName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Division Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duplicate_Supplemental_Coverage_Allowed__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Usually applied to a Group&apos;s VIP&apos;s or POS business. Product family same but benefits are different (E.g. Members allowed to enroll in both Vision Safety Eyewear + Routine Vision). This field was added for the WGS system and the Group Load functionality.</inlineHelpText>
        <label>Duplicate Supplemental Coverage Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Assistance_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Will the group offer EAP benefits? This field was added for the WGS system and the Group Load functionality.</inlineHelpText>
        <label>Employee Assistance Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_ID_Case_Number__c</fullName>
        <description>Created to store data of &quot;Employer ID (Case Number)&quot; of &quot;CDHP Questionnaire&quot; object from ISG org.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer ID (Case Number)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engage_Alone_Product_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engage Alone Product Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engage_Product_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engage Product Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Envelope_Number__c</fullName>
        <description>Created to store data of &quot;Envelope#&quot; of DocuSign Status object from ISG org.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Envelope Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_Sent_Age__c</fullName>
        <description>Created to store data of &quot;dsfs__Sent_Age__c&quot; of DocuSign Status object from ISG org.</description>
        <label>Envelope Sent Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Envelope_Sent__c</fullName>
        <description>Created to store data of &quot;dsfs__Sent_Date_Time__c&quot; of DocuSign Status object from ISG org.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Envelope Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Envelope_Status__c</fullName>
        <description>Created to store data of &quot;dsfs__Envelope_Status__c&quot; of DocuSign Status object from ISG org.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Envelope Status</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Territorial_Blue_Card_Indicator_Ef__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the Effective Date for the &apos;Extra Territorial Blue Card Indicator&apos; field.</inlineHelpText>
        <label>Extra Territorial Blue Card Indicator Ef</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extra_Territorial_Blue_Card_Indicator__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Indicates the group has Blue Card Extra-territorial Indicator. Three Options: 1) Has ET benefits = Yes ;2) Does not have ET benefits = No ; 3) ET benefits do not apply = Leave Blank.This field was added for the WGS system and the Group Load functionality.</inlineHelpText>
        <label>Extra Territorial Blue Card Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FiduciaryServicesSoldASOOnly__c</fullName>
        <label>Fiduciary Services Sold:(ASO Only)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (Anthem has final responsibility on Appeals)</fullName>
                </value>
                <value>
                    <fullName>No (ASO Client has final responsibility on Appeals)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupNumberRequestStatus__c</fullName>
        <description>Gives the status for the group number requested/ tagged to this quote.</description>
        <formula>IF( OR(TEXT(GroupNumber__r.GroupNumberRequestStatus__c)=&apos;Requested and Assigned&apos;, 
TEXT(GroupNumber__r.GroupNumberRequestStatus__c)=&apos;N/A&apos;, TEXT(GroupNumber__r.GroupNumberRequestStatus__c)= &apos;Manually Assigned&apos;), &apos;Requested&apos;, IF( OR(ISBLANK(TEXT(GroupNumber__r.GroupNumberRequestStatus__c)), 
TEXT(GroupNumber__r.GroupNumberRequestStatus__c)=&apos;Not Requested&apos;,TEXT(GroupNumber__r.GroupNumberRequestStatus__c)=&apos;Requested&apos;), &apos;Not Requested&apos;, &apos;N/A&apos; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Group__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupOriginalEffectiveDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GroupSize__c</fullName>
        <formula>Text(Opportunity.Account.Group_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupSize</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number_Claim_System__c</fullName>
        <formula>GrpName__c &amp; Claim_System__c &amp; Text(Opportunity.CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number&amp;Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A (ACTIVE)</fullName>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>C (COBRA)</fullName>
                    <label>COBRA</label>
                </value>
                <value>
                    <fullName>E (STATE EXTENSION)</fullName>
                    <label>State Extension</label>
                </value>
                <value>
                    <fullName>R (RETIREE)</fullName>
                    <label>Retiree</label>
                </value>
                <value>
                    <fullName>X (SUPH EXT CONT)</fullName>
                    <label>SUPH Ext Continued</label>
                </value>
                <value>
                    <fullName>M (SG BILL ENTITY) (Rarely Used)</fullName>
                    <label>SG Bill Entity</label>
                </value>
                <value>
                    <fullName>N (COBRA-NON PART) (Rarely Used)</fullName>
                    <label>COBRA - Non Part</label>
                </value>
                <value>
                    <fullName>P (COBRA-PART) (Rarely Used)</fullName>
                    <label>COBRA-Part</label>
                </value>
                <value>
                    <fullName>S (SENIOR COBRA) (Rarely Used)</fullName>
                    <label>Senior COBRA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrpName__c</fullName>
        <formula>GroupNumber__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrpName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrpNumber__c</fullName>
        <formula>GroupNumber__r.Name</formula>
        <label>GrpNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imp_Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsGNExist__c</fullName>
        <formula>IF(ISBLANK(GroupNumber__c),&apos;No&apos;,&apos;Yes&apos;)</formula>
        <label>IsGNExist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsGroupExist__c</fullName>
        <formula>IF( ISBLANK(GroupNumber__c) , &apos;NotExist&apos;, &apos;Exist&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsGroupExist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsGroupNumberExist__c</fullName>
        <formula>NOT(ISBLANK(GroupNumber__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsGroupNumberExist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GRS_Profile_With_Correct_Record_Type__c</fullName>
        <description>check if the profile is GRS Or GRS Dual Profile with correct record type(only LG Prospect, LG Customer, Customer and Prospect)</description>
        <formula>if((LoggedInUserProfile__c == &quot;GRS&quot; || LoggedInUserProfile__c == &quot;GRS Dual&quot;) &amp;&amp; ( Opportunity.RecordTypeName__c == &quot;GRS In Group Add Product&quot; || Opportunity.RecordTypeName__c == &quot;GRS In Group Change&quot; || Opportunity.RecordTypeName__c == &quot;GRS New Business&quot; || Opportunity.RecordTypeName__c == &quot;GRS Renewal&quot;),&quot;GRS&quot;,if((LoggedInUserProfile__c == &quot;System Administrator&quot;),&quot;Admin&quot;, &quot;Others&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is GRS Profile With Correct Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_JAA__c</fullName>
        <description>This field is set to true when financing field of Quotelineitem is JAA</description>
        <label>Is JAA</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Financing__c</field>
            <operation>equals</operation>
            <value>JAA (Jointly Administered Arrangement)</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>JAAIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JAA Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Plan_Config_Exception__c</fullName>
        <formula>$User.LG_Plan_Config_Exception__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG_Plan_Config_Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LHOL_Q__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LHOL Q</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineofBusiness__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD&amp;D</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Anthem Personalized Well Being</fullName>
                </value>
                <value>
                    <fullName>Benefits Admin</fullName>
                </value>
                <value>
                    <fullName>DeCare Dental</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Employee Asst Program</fullName>
                </value>
                <value>
                    <fullName>Expatriate</fullName>
                </value>
                <value>
                    <fullName>Flexible Spending Acct</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                </value>
                <value>
                    <fullName>Health and Wellness</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Network Based</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Premium Only Plan-Section 125</fullName>
                </value>
                <value>
                    <fullName>STD</fullName>
                </value>
                <value>
                    <fullName>Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Workers Compensation</fullName>
                </value>
                <value>
                    <fullName>ABA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live_Health_Online__c</fullName>
        <inlineHelpText>Determines if the employer wants to include the livehealthonline.com link on the member ID cards. (Medical Only.) This field was added for the WGS system and the Group Load functionality.</inlineHelpText>
        <label>Live Health Online</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Place Live Health Online URL on ID Card</fullName>
                </value>
                <value>
                    <fullName>No - Do Not Place Live Health Online URL on ID Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoggedInUserProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <label>Logged In User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logged_In_User_PermissionSet__c</fullName>
        <formula>$User.ProfileName__c=&apos;System Administrator&apos; || (($User.ProfileName__c=&apos;Local Sales&apos; || $User.ProfileName__c=&apos;Local Sales Dual&apos;)  &amp;&amp; $Permission.HRAHSAPermissionSet )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged In User PermissionSet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCS_Group__c</fullName>
        <description>This field holds roll up for the QLI which has Financing type as  MCS Network Rental. We are using this result in another field on Implementation case for a check box</description>
        <label>MCS Group</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Financing__c</field>
            <operation>equals</operation>
            <value>MCS Network Rental</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Med_to_Rx__c</fullName>
        <label>Med to Rx</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Med_to_Rx_and_Rx_to_Med__c</fullName>
        <label>Med to Rx and Rx to Med</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedicalPLs__c</fullName>
        <label>Medical PLs</label>
        <summaryFilterItems>
            <field>QuoteLineItem.ReportingLOB__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <description>These are temporal fields added for request 1260. These values will be used when creating a standalone IGAP opportunity and directly connect to the AddProduct OS.</description>
        <label>Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NASCOMarketSegmentCode__c</fullName>
        <inlineHelpText>Based on number of eligible employees (contracts).</inlineHelpText>
        <label>NASCO Market Segment Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>04 National Large Group</fullName>
                </value>
                <value>
                    <fullName>13 National Joint Administered Arrangements (JAA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NONB_Resent_Date_Time__c</fullName>
        <description>This is the last date/time the &quot;Act Wise Notice of New Business&quot; form was resent via the &quot;Resend&quot; button (link) on the Quote record page. The form can be resent multiple times via the &quot;Resend&quot; link so this field stores the last date/time. (PRDCRM-42547)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NONB Resent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NONB_Resent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field stores the number of times the &quot;Act Wise Notice of New Business&quot;  form has been emailed via the click on the  &quot;Resend Act Wise Notice of New Business&quot; button on the Quote Record Page. (PRDCRM-42547)</description>
        <label>NONB Resent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NONB_Sent_Date_Time__c</fullName>
        <description>This is the date/time the &quot;Act Wise Notice of New Business&quot; form was emailed via the &quot;Send&quot; button (link) on the Quote record page. (PRDCRM-42547)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NONB Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NONB_Sent__c</fullName>
        <defaultValue>VALUE(&quot;0&quot;)</defaultValue>
        <description>This field will store a 0 = &quot;Act Wise Notice of New Business&quot; form NOT sent  or
                                 1 = &quot;Act Wise Notice of New Business&quot; form sent</description>
        <label>NONB Sent</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_open_Products__c</fullName>
        <label>No of open Products</label>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP In Progress, In Progress, Jeopardy</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Pooled__c</fullName>
        <formula>Text(Opportunity.Account.Pooled_Non_Pooled__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Pooled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Critical_Illness_Prod_Finalized__c</fullName>
        <label>Num of Critical Illness Prod Finalized</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Critical Illness</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Renewed, Sold, Termed, Not renewing in Current Period</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Hospital_Indemnity_Prod_Finalized__c</fullName>
        <label>Num of Hospital Indemnity Prod Finalized</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Hospital Indemnity</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Renewed, Sold, Termed, Not renewing in Current Period</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>